# packaging_tutorial

./: README.md  pyproject.toml
src/example_package_AlistairCurd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
