[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_AlistairCurd"
version = "0.0.1"
authors = [
    { name="Alistair Curd", email="a.curd@leeds.ac.uk" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
